--- a/environment.yml
+++ b/environment.yml
@@ -52,6 +52,7 @@ dependencies:
   - nbconvert=5.5.0=py_0
   - nbformat=4.4.0=py37_0
   - ncurses=6.1=he6710b0_1
+  - nltk=3.4.5=py37_0
   - notebook=6.0.1=py37_0
   - numpy=1.16.5=py37h7e9f1db_0
   - numpy-base=1.16.5=py37hde5b4d6_0
