--- a/environment.yml
+++ b/environment.yml
@@ -16,10 +16,19 @@ dependencies:
   - conda=4.7.11=py37_0
   - conda-package-handling=1.3.11=py37_0
   - cryptography=2.7=py37h1ba5d50_0
+  - cycler=0.10.0=py37_0
+  - dbus=1.13.6=h746ee38_0
   - decorator=4.4.0=py37_1
   - defusedxml=0.6.0=py_0
   - entrypoints=0.3=py37_0
+  - expat=2.2.6=he6710b0_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.9.1=h8a8886c_1
+  - glib=2.56.2=hd408876_0
   - gmp=6.1.2=h6c8ec71_1
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb453b48_1
+  - icu=58.2=h9c2bf20_1
   - idna=2.8=py37_0
   - intel-openmp=2019.4=243
   - ipykernel=5.1.2=py37h39e3cac_0
@@ -27,23 +36,29 @@ dependencies:
   - ipython_genutils=0.2.0=py37_0
   - jedi=0.15.1=py37_0
   - jinja2=2.10.1=py37_0
+  - jpeg=9b=h024ee3a_2
   - json5=0.8.5=py_0
   - jsonschema=3.0.2=py37_0
   - jupyter_client=5.3.1=py_0
   - jupyter_core=4.5.0=py_0
   - jupyterlab=1.1.3=pyhf63ae98_0
   - jupyterlab_server=1.0.0=py_1
+  - kiwisolver=1.1.0=py37he6710b0_0
   - libarchive=3.3.3=h5d8350f_5
   - libedit=3.1.20181209=hc058e9b_0
   - libffi=3.2.1=hd88cf55_4
   - libgcc-ng=9.1.0=hdf63c60_0
   - libgfortran-ng=7.3.0=hdf63c60_0
+  - libpng=1.6.37=hbc83047_0
   - libsodium=1.0.16=h1bed415_0
   - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.13=h1bed415_1
   - libxml2=2.9.9=hea5a465_1
   - lz4-c=1.8.1.2=h14c3975_0
   - lzo=2.10=h49e0be7_2
   - markupsafe=1.1.1=py37h7b6447c_0
+  - matplotlib=3.1.1=py37h5429711_0
   - mistune=0.8.4=py37h7b6447c_0
   - mkl=2019.4=243
   - mkl-service=2.3.0=py37he904b0f_0
@@ -57,9 +72,11 @@ dependencies:
   - numpy=1.16.5=py37h7e9f1db_0
   - numpy-base=1.16.5=py37hde5b4d6_0
   - openssl=1.1.1d=h7b6447c_1
+  - pandas=0.25.1=py37he6710b0_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
   - parso=0.5.1=py_0
+  - pcre=8.43=he6710b0_0
   - pexpect=4.7.0=py37_0
   - pickleshare=0.7.5=py37_0
   - pip=19.2.2=py37_0
@@ -70,17 +87,22 @@ dependencies:
   - pycparser=2.19=py37_0
   - pygments=2.4.2=py_0
   - pyopenssl=19.0.0=py37_0
+  - pyparsing=2.4.2=py_0
+  - pyqt=5.9.2=py37h05f1152_2
   - pyrsistent=0.14.11=py37h7b6447c_0
   - pysocks=1.7.0=py37_0
   - python=3.7.3=h0371630_0
   - python-dateutil=2.8.0=py37_0
   - python-libarchive-c=2.8=py37_13
+  - pytz=2019.2=py_0
   - pyzmq=18.1.0=py37he6710b0_0
+  - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
   - requests=2.22.0=py37_0
   - ruamel_yaml=0.15.46=py37h14c3975_0
   - send2trash=1.5.0=py37_0
   - setuptools=41.0.1=py37_0
+  - sip=4.19.8=py37hf484d3e_0
   - six=1.12.0=py37_0
   - sqlite=3.29.0=h7b6447c_0
   - terminado=0.8.2=py37_0
