--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: base
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
@@ -9,14 +10,16 @@ dependencies:
   - blas=1.0=mkl
   - bleach=3.1.0=py37_0
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2019.5.15=1
-  - certifi=2019.6.16=py37_1
+  - ca-certificates=2019.9.11=hecc5488_0
+  - certifi=2019.9.11=py37_0
   - cffi=1.12.3=py37h2e261b9_0
   - chardet=3.0.4=py37_1003
-  - conda=4.7.11=py37_0
+  - conda=4.7.12=py37_0
   - conda-package-handling=1.3.11=py37_0
   - cryptography=2.7=py37h1ba5d50_0
   - cycler=0.10.0=py37_0
+  - cymem=2.0.2=py37he1b5a44_0
+  - cython-blis=0.2.4=py37h516909a_1
   - dbus=1.13.6=h746ee38_0
   - decorator=4.4.0=py37_1
   - defusedxml=0.6.0=py_0
@@ -64,6 +67,7 @@ dependencies:
   - mkl-service=2.3.0=py37he904b0f_0
   - mkl_fft=1.0.14=py37ha843d7b_0
   - mkl_random=1.0.2=py37hd81dba3_0
+  - murmurhash=1.0.0=py37hf484d3e_0
   - nbconvert=5.5.0=py_0
   - nbformat=4.4.0=py37_0
   - ncurses=6.1=he6710b0_1
@@ -71,7 +75,7 @@ dependencies:
   - notebook=6.0.1=py37_0
   - numpy=1.16.5=py37h7e9f1db_0
   - numpy-base=1.16.5=py37hde5b4d6_0
-  - openssl=1.1.1d=h7b6447c_1
+  - openssl=1.1.1c=h516909a_0
   - pandas=0.25.1=py37he6710b0_0
   - pandoc=2.2.3.2=0
   - pandocfilters=1.4.2=py37_1
@@ -80,6 +84,8 @@ dependencies:
   - pexpect=4.7.0=py37_0
   - pickleshare=0.7.5=py37_0
   - pip=19.2.2=py37_0
+  - plac=0.9.6=py37_0
+  - preshed=2.0.1=py37he1b5a44_0
   - prometheus_client=0.7.1=py_0
   - prompt_toolkit=2.0.9=py37_0
   - ptyprocess=0.6.0=py37_0
@@ -104,14 +110,18 @@ dependencies:
   - setuptools=41.0.1=py37_0
   - sip=4.19.8=py37hf484d3e_0
   - six=1.12.0=py37_0
+  - spacy=2.1.8=py37hc9558a2_0
   - sqlite=3.29.0=h7b6447c_0
+  - srsly=0.1.0=py37he1b5a44_0
   - terminado=0.8.2=py37_0
   - testpath=0.4.2=py37_0
+  - thinc=7.0.8=py37hc9558a2_0
   - tk=8.6.8=hbc83047_0
   - tornado=6.0.3=py37h7b6447c_0
   - tqdm=4.32.1=py_0
   - traitlets=4.3.2=py37_0
   - urllib3=1.24.2=py37_0
+  - wasabi=0.2.2=py_0
   - wcwidth=0.1.7=py37_0
   - webencodings=0.5.1=py37_1
   - wheel=0.33.4=py37_0
@@ -120,5 +130,7 @@ dependencies:
   - zeromq=4.3.1=he6710b0_3
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
+  - pip:
+    - en-core-web-sm==2.1.0
 prefix: /opt/conda
 
