--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: base
 channels:
+  - plotly
   - conda-forge
   - defaults
 dependencies:
@@ -86,6 +87,7 @@ dependencies:
   - pickleshare=0.7.5=py37_0
   - pip=19.2.2=py37_0
   - plac=0.9.6=py37_0
+  - plotly=4.1.1=py_0
   - preshed=2.0.1=py37he1b5a44_0
   - prometheus_client=0.7.1=py_0
   - prompt_toolkit=2.0.9=py37_0
@@ -106,6 +108,7 @@ dependencies:
   - qt=5.9.7=h5867ecd_1
   - readline=7.0=h7b6447c_5
   - requests=2.22.0=py37_0
+  - retrying=1.3.3=py37_2
   - ruamel_yaml=0.15.46=py37h14c3975_0
   - send2trash=1.5.0=py37_0
   - setuptools=41.0.1=py37_0
